k8s/adminer/service.yaml
# adminer Service
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
